// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cognito Message Handler when triggerSource is CustomMessage_ForgotPassword sets a Password Reset email message and subject 1`] = `
Object {
  "emailMessage": "
      <table width=\\"100%\\" style=\\"font-family: Open Sans,Helvetica
      Neue,Helvetica,Arial,sans-serif;
      font-size: 16px;
      text-align: left;\\"
      cellpadding=\\"0\\"
      cellspacing=\\"0\\">
      <tbody>
          <tr>
              <td style=\\"background: #14558f; height: 24px\\"></td>
          </tr>
          <tr>
              <td
                  style=\\"background: #be5817;
                  padding: 16px 32px;\\">
                  <table
                      align=\\"center\\"
                      cellspacing=\\"0\\"
                      style=\\"max-width: 600px;\\"
                      width=\\"100%\\">
                      <tbody>
                          <tr>
                              <td>
                                  <img
                                      alt=\\"Massachusetts Paid Family and Medical Leave\\"
                                      src=\\"https://mcusercontent.com/0757f7959581770082e8f2fd9/images/4665cf36-af48-4bce-9032-33a7786052de.png\\"
                                      width=\\"264\\"
                                      style=\\"padding-bottom: 0;\\"
                                      class=\\"mcnImage\\"
                                      />
                              </td>
                          </tr>
                      </tbody>
                  </table>
              </td>
          </tr>
          <tr>
              <td>
                  <table
                      align=\\"center\\"
                      style=\\"line-height: 150%;
                      text-align: left;
                      max-width: 600px;
                      color:#535353;padding-bottom: 32px;\\" width=\\"100%\\">
                      <tbody>
                      <tr>
                      <td style=\\"padding: 32px;\\">
                        We received a request to reset your Paid Family and Medical Leave account password. <a href=\\"https://paidleave-test.mass.gov/reset-password\\" rel=\\"noopener\\" target=\\"_blank\\">Return to the application</a> and enter this 6-digit code:
                      </td>
                    </tr>
            
                    <tr>
                      <td style=\\"text-align: center\\">
                        <strong style=\\"display: inline-block; font-size: 22px;\\">{####}</strong>
                      </td>
                    </tr>
            
                    <tr>
                      <td style=\\"padding: 32px; text-align: center;\\">
                        This code is only valid for 24 hours. If you didn’t request a password reset, please ignore this email. Your password won’t be changed.
                      </td>
                    </tr>
                      </tbody>
                  </table>
              </td>
          </tr>
          <tr>
              <td style=\\"background: #FAFAFA; border-top: 3px solid
                  #EAEAEA;\\">
                  <table
                      align=\\"center\\"
                      style=\\"max-width: 600px;\\"
                      width=\\"100%\\">
                      <tbody>
                          <tr>
                              <td>
                                  <img
                                      align=\\"center\\"
                                      alt=\\"\\"
                                      src=\\"https://mcusercontent.com/0757f7959581770082e8f2fd9/images/a163a15d-9150-4959-9b02-998caa00bca4.png\\"
                                      width=\\"564\\"
                                      style=\\"max-width: 903px;
                                      padding: 0 18px;
                                      display: inline;
                                      vertical-align: bottom;\\" />
                              </td>
                          </tr>

                          <tr>
                              <td style=\\"padding:0px 18px 9px;
                                  text-align: left;
                                  color: #656565; font-size: 12px;\\">
                                  <div>
                                      <a
                                          href=\\"https://www.mass.gov/orgs/department-of-family-and-medical-leave\\"
                                          rel=\\"noopener\\"
                                          target=\\"_blank\\"
                                          data-saferedirecturl=\\"https://www.google.com/url?hl=en&amp;q=https://www.mass.gov/orgs/department-of-family-and-medical-leave&amp;source=gmail&amp;ust=1607720450081000&amp;usg=AFQjCNF21ULm-5y7N8G5cZXEVu-uHldNPg\\">
                                          Department of Family &
                                          Medical Leave
                                      </a>
                                  </div>
                                  <div>P.O. Box 838, Lawrence, MA
                                      01842</div>
                                  <div>(833) 344-7365 from 8am–5pm ET</div>
                              </td>
                          </tr>

                          <tr>
                              <td style=\\"font-size: 12px;
                                  font-style: italic; padding: 18px;\\">
                                  This e-mail message is for the sole
                                  use of the intended recipient and
                                  may contain confidential and
                                  privileged information. Any
                                  unauthorized review, use,
                                  disclosure, or distribution is
                                  strictly prohibited. If you are not
                                  the intended recipient, please
                                  contact us at (833) 344-7365 from
                                  8am–5pm ET and then destroy all
                                  copies of the original message.
                              </td>
                          </tr>
                      </tbody>
                  </table>
              </td>
          </tr>
      </tbody>
    </table>
  ",
  "emailSubject": "Reset your Paid Family and Medical Leave password",
  "smsMessage": null,
}
`;

exports[`Cognito Message Handler when triggerSource is CustomMessage_ResendCode sets a Account Verification email message and subject 1`] = `
Object {
  "emailMessage": "
      <table width=\\"100%\\" style=\\"font-family: Open Sans,Helvetica
      Neue,Helvetica,Arial,sans-serif;
      font-size: 16px;
      text-align: left;\\"
      cellpadding=\\"0\\"
      cellspacing=\\"0\\">
      <tbody>
          <tr>
              <td style=\\"background: #14558f; height: 24px\\"></td>
          </tr>
          <tr>
              <td
                  style=\\"background: #be5817;
                  padding: 16px 32px;\\">
                  <table
                      align=\\"center\\"
                      cellspacing=\\"0\\"
                      style=\\"max-width: 600px;\\"
                      width=\\"100%\\">
                      <tbody>
                          <tr>
                              <td>
                                  <img
                                      alt=\\"Massachusetts Paid Family and Medical Leave\\"
                                      src=\\"https://mcusercontent.com/0757f7959581770082e8f2fd9/images/4665cf36-af48-4bce-9032-33a7786052de.png\\"
                                      width=\\"264\\"
                                      style=\\"padding-bottom: 0;\\"
                                      class=\\"mcnImage\\"
                                      />
                              </td>
                          </tr>
                      </tbody>
                  </table>
              </td>
          </tr>
          <tr>
              <td>
                  <table
                      align=\\"center\\"
                      style=\\"line-height: 150%;
                      text-align: left;
                      max-width: 600px;
                      color:#535353;padding-bottom: 32px;\\" width=\\"100%\\">
                      <tbody>
                      <tr>
                      <td style=\\"padding: 32px;\\">
                        To activate your account, you need to verify your email address. <a href=\\"https://paidleave-test.mass.gov/verify-account\\" rel=\\"noopener\\" target=\\"_blank\\">Return to the application</a> and enter this 6-digit code:
                      </td>
                    </tr>
            
                    <tr>
                      <td style=\\"text-align: center\\">
                        <strong style=\\"display: inline-block; font-size: 22px;\\">{####}</strong>
                      </td>
                    </tr>
            
                    <tr>
                      <td style=\\"padding: 32px; text-align: center;\\">
                        This code is only valid for 24 hours.
                      </td>
                    </tr>
                      </tbody>
                  </table>
              </td>
          </tr>
          <tr>
              <td style=\\"background: #FAFAFA; border-top: 3px solid
                  #EAEAEA;\\">
                  <table
                      align=\\"center\\"
                      style=\\"max-width: 600px;\\"
                      width=\\"100%\\">
                      <tbody>
                          <tr>
                              <td>
                                  <img
                                      align=\\"center\\"
                                      alt=\\"\\"
                                      src=\\"https://mcusercontent.com/0757f7959581770082e8f2fd9/images/a163a15d-9150-4959-9b02-998caa00bca4.png\\"
                                      width=\\"564\\"
                                      style=\\"max-width: 903px;
                                      padding: 0 18px;
                                      display: inline;
                                      vertical-align: bottom;\\" />
                              </td>
                          </tr>

                          <tr>
                              <td style=\\"padding:0px 18px 9px;
                                  text-align: left;
                                  color: #656565; font-size: 12px;\\">
                                  <div>
                                      <a
                                          href=\\"https://www.mass.gov/orgs/department-of-family-and-medical-leave\\"
                                          rel=\\"noopener\\"
                                          target=\\"_blank\\"
                                          data-saferedirecturl=\\"https://www.google.com/url?hl=en&amp;q=https://www.mass.gov/orgs/department-of-family-and-medical-leave&amp;source=gmail&amp;ust=1607720450081000&amp;usg=AFQjCNF21ULm-5y7N8G5cZXEVu-uHldNPg\\">
                                          Department of Family &
                                          Medical Leave
                                      </a>
                                  </div>
                                  <div>P.O. Box 838, Lawrence, MA
                                      01842</div>
                                  <div>(833) 344-7365 from 8am–5pm ET</div>
                              </td>
                          </tr>

                          <tr>
                              <td style=\\"font-size: 12px;
                                  font-style: italic; padding: 18px;\\">
                                  This e-mail message is for the sole
                                  use of the intended recipient and
                                  may contain confidential and
                                  privileged information. Any
                                  unauthorized review, use,
                                  disclosure, or distribution is
                                  strictly prohibited. If you are not
                                  the intended recipient, please
                                  contact us at (833) 344-7365 from
                                  8am–5pm ET and then destroy all
                                  copies of the original message.
                              </td>
                          </tr>
                      </tbody>
                  </table>
              </td>
          </tr>
      </tbody>
    </table>
  ",
  "emailSubject": "Verify your Paid Family and Medical Leave account",
  "smsMessage": null,
}
`;

exports[`Cognito Message Handler when triggerSource is CustomMessage_SignUp sets a Account Verification email message and subject 1`] = `
Object {
  "emailMessage": "
      <table width=\\"100%\\" style=\\"font-family: Open Sans,Helvetica
      Neue,Helvetica,Arial,sans-serif;
      font-size: 16px;
      text-align: left;\\"
      cellpadding=\\"0\\"
      cellspacing=\\"0\\">
      <tbody>
          <tr>
              <td style=\\"background: #14558f; height: 24px\\"></td>
          </tr>
          <tr>
              <td
                  style=\\"background: #be5817;
                  padding: 16px 32px;\\">
                  <table
                      align=\\"center\\"
                      cellspacing=\\"0\\"
                      style=\\"max-width: 600px;\\"
                      width=\\"100%\\">
                      <tbody>
                          <tr>
                              <td>
                                  <img
                                      alt=\\"Massachusetts Paid Family and Medical Leave\\"
                                      src=\\"https://mcusercontent.com/0757f7959581770082e8f2fd9/images/4665cf36-af48-4bce-9032-33a7786052de.png\\"
                                      width=\\"264\\"
                                      style=\\"padding-bottom: 0;\\"
                                      class=\\"mcnImage\\"
                                      />
                              </td>
                          </tr>
                      </tbody>
                  </table>
              </td>
          </tr>
          <tr>
              <td>
                  <table
                      align=\\"center\\"
                      style=\\"line-height: 150%;
                      text-align: left;
                      max-width: 600px;
                      color:#535353;padding-bottom: 32px;\\" width=\\"100%\\">
                      <tbody>
                      <tr>
                      <td style=\\"padding: 32px;\\">
                        To activate your account, you need to verify your email address. <a href=\\"https://paidleave-test.mass.gov/verify-account\\" rel=\\"noopener\\" target=\\"_blank\\">Return to the application</a> and enter this 6-digit code:
                      </td>
                    </tr>
            
                    <tr>
                      <td style=\\"text-align: center\\">
                        <strong style=\\"display: inline-block; font-size: 22px;\\">{####}</strong>
                      </td>
                    </tr>
            
                    <tr>
                      <td style=\\"padding: 32px; text-align: center;\\">
                        This code is only valid for 24 hours.
                      </td>
                    </tr>
                      </tbody>
                  </table>
              </td>
          </tr>
          <tr>
              <td style=\\"background: #FAFAFA; border-top: 3px solid
                  #EAEAEA;\\">
                  <table
                      align=\\"center\\"
                      style=\\"max-width: 600px;\\"
                      width=\\"100%\\">
                      <tbody>
                          <tr>
                              <td>
                                  <img
                                      align=\\"center\\"
                                      alt=\\"\\"
                                      src=\\"https://mcusercontent.com/0757f7959581770082e8f2fd9/images/a163a15d-9150-4959-9b02-998caa00bca4.png\\"
                                      width=\\"564\\"
                                      style=\\"max-width: 903px;
                                      padding: 0 18px;
                                      display: inline;
                                      vertical-align: bottom;\\" />
                              </td>
                          </tr>

                          <tr>
                              <td style=\\"padding:0px 18px 9px;
                                  text-align: left;
                                  color: #656565; font-size: 12px;\\">
                                  <div>
                                      <a
                                          href=\\"https://www.mass.gov/orgs/department-of-family-and-medical-leave\\"
                                          rel=\\"noopener\\"
                                          target=\\"_blank\\"
                                          data-saferedirecturl=\\"https://www.google.com/url?hl=en&amp;q=https://www.mass.gov/orgs/department-of-family-and-medical-leave&amp;source=gmail&amp;ust=1607720450081000&amp;usg=AFQjCNF21ULm-5y7N8G5cZXEVu-uHldNPg\\">
                                          Department of Family &
                                          Medical Leave
                                      </a>
                                  </div>
                                  <div>P.O. Box 838, Lawrence, MA
                                      01842</div>
                                  <div>(833) 344-7365 from 8am–5pm ET</div>
                              </td>
                          </tr>

                          <tr>
                              <td style=\\"font-size: 12px;
                                  font-style: italic; padding: 18px;\\">
                                  This e-mail message is for the sole
                                  use of the intended recipient and
                                  may contain confidential and
                                  privileged information. Any
                                  unauthorized review, use,
                                  disclosure, or distribution is
                                  strictly prohibited. If you are not
                                  the intended recipient, please
                                  contact us at (833) 344-7365 from
                                  8am–5pm ET and then destroy all
                                  copies of the original message.
                              </td>
                          </tr>
                      </tbody>
                  </table>
              </td>
          </tr>
      </tbody>
    </table>
  ",
  "emailSubject": "Verify your Paid Family and Medical Leave account",
  "smsMessage": null,
}
`;
